--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/26_mugcake/26_29.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/26_mugcake/26_29.yaml
@@ -30,10 +30,8 @@ step_annotations:
     the bowl
   end_time: 160.89118820777645
   errors:
-  - description: Leave lumps
+  - description: Use spoon instead of a whisker
     tag: Preparation Error
-  modified_description: (NOT ENOUGH) Whisk-Whisk to combine mixture of flour, sugar
-    and baking powder in the bowl
   start_time: 150.02016197752127
   step_id: 308
 - description: Measure and add-2 tbsp water to the bowl
@@ -59,8 +57,10 @@ step_annotations:
 - description: Whisk-Whisk batter until no lumps remain
   end_time: 325.6959458584447
   errors:
-  - description: Do not whisk enough - lumps will lead to bad output
+  - description: Did not whisk completely. Will lead to lumps in the cupcake
     tag: Technique Error
+  - description: Used spoon instead of whisker
+    tag: Preparation Error
   modified_description: NOT ENOUGH Whisk-Whisk batter
   start_time: 312.2158733329283
   step_id: 294
@@ -78,12 +78,8 @@ step_annotations:
     additional 5 seconds. If the toothpick comes out clean, continue
   end_time: 572.7355616023744
   errors:
-  - description: Microwave for 90 seconds. Might burn the cupcake
+  - description: Microwave for 90 seconds.
     tag: Timing Error
-  modified_description: Microwave-Microwave the mug and batter on high power for 90
-    seconds. Check if the cake is done by inserting and toothpick into the center
-    of the cake and then removing it. If wet batter clings to the toothpick, microwave
-    for an additional 15 seconds. If the toothpick comes out clean, continue
   start_time: 352.149964442364
   step_id: 312
 - description: Invert-Invert the mug to release the cake onto a plate
@@ -96,10 +92,6 @@ step_annotations:
   step_id: 305
 - description: remove-then carefully remove the paper liner
   end_time: 629.214998207169
-  errors:
-  - description: Break the cupcake while removing the paper linear
-    tag: Technique Error
-  modified_description: '[TEAR] remove-then remove the paper liner'
   start_time: 619.6484951245444
   step_id: 295
 - description: Scoop-While the cake is cooling, prepare to pipe the frosting. Scoop
@@ -108,7 +100,7 @@ step_annotations:
   errors:
   - description: Take only 1 spoon, will not be enough for the forsting
     tag: Measurement Error
-  - description: 'Use wrong ingredients, choclate powder instead of frosting '
+  - description: Used cocoa powder instead of chocolate frosting
     tag: Preparation Error
   modified_description: Scoop-While the cake is cooling, prepare to pipe the frosting.
     Scoop 1 spoonfuls of chocolate powder into a zip-top bag
@@ -126,7 +118,7 @@ step_annotations:
     1/4 inch in diameter
   end_time: 715.5827132669675
   errors:
-  - description: 'Make a big cut. This will lead to bigger frosting '
+  - description: Cut a bigger hole in the bag
     tag: Measurement Error
   modified_description: cut-Use scissors to cut one corner from the bag to create
     a small opening 1/2 inch in diameter
@@ -135,5 +127,9 @@ step_annotations:
 - description: Squeeze-Squeeze the frosting through the opening to apply small dollops
     of frosting to the plate in a circle around the base of the cake
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 302
