--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/26_mugcake/26_36.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/26_mugcake/26_36.yaml
@@ -4,6 +4,9 @@ recording_id: '26_36'
 step_annotations:
 - description: Measure and add-1/4 tsp baking powder to the bowl
   end_time: 57.227877725290696
+  errors:
+  - description: Dropping the measuring instrument in the bowl
+    tag: Technique Error
   start_time: 10.793893229166668
   step_id: 304
 - description: Measure and add-a pinch of salt to the mixing bowl
@@ -16,6 +19,9 @@ step_annotations:
   step_id: 299
 - description: Measure and add-1.5 tbsp sugar to the mixing bowl
   end_time: 196.86594700951989
+  errors:
+  - description: Use of soiled measuring instrument
+    tag: Preparation Error
   start_time: 159.18061720819537
   step_id: 297
 - description: Whisk-Whisk to combine mixture of flour, sugar and baking powder in
@@ -36,6 +42,10 @@ step_annotations:
   end_time: 316.36811124793047
   start_time: 294.0544291287252
   step_id: 303
+- description: Set-Set aside the lined mug
+  end_time: 322
+  start_time: 315
+  step_id: 301
 - description: Measure and add-2 tbsp water to the bowl
   end_time: 346.11968740687087
   start_time: 325.29358409561263
@@ -44,13 +54,6 @@ step_annotations:
   end_time: 390.25119204263245
   start_time: 357.524458267798
   step_id: 313
-- description: Set-Set aside the lined mug
-  end_time: -1.0
-  errors:
-  - description: did not perform this step
-    tag: Missing Step
-  start_time: -1.0
-  step_id: 301
 - description: Whisk-Whisk batter until no lumps remain
   end_time: 438.8454331022352
   errors:
@@ -102,5 +105,9 @@ step_annotations:
 - description: Squeeze-Squeeze the frosting through the opening to apply small dollops
     of frosting to the plate in a circle around the base of the cake
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 302
