--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/26_mugcake/26_42.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/26_mugcake/26_42.yaml
@@ -5,7 +5,7 @@ step_annotations:
 - description: Measure and add-a pinch of salt to the mixing bowl
   end_time: 79.02549713152804
   errors:
-  - description: Add a teaspoon
+  - description: Add a teaspoon rather than a pinch
     tag: Measurement Error
   modified_description: Measure and add-a teaspoon of salt to the mixing bowl
   start_time: 0
@@ -23,14 +23,10 @@ step_annotations:
   step_id: 299
 - description: Place-Place the paper cupcake liner inside the mug
   end_time: 163.204
-  modified_description: Place-Place the folded paper cupcake liner inside the mug
   start_time: 106.256
   step_id: 303
 - description: Set-Set aside the lined mug
   end_time: 174.03199999999998
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 169.15699999999998
   step_id: 301
 - description: Measure and add-1/4 tsp baking powder to the bowl
@@ -38,14 +34,15 @@ step_annotations:
   errors:
   - description: spilled the baking powder out while adding to cup
     tag: Technique Error
-  modified_description: Measure and add-1/4 tsp baking powder to the bowl and spill
-    some outside
+  - description: Added 1/2 tsp rather than 1/4 tsp
+    tag: Measurement Error
+  modified_description: Measure and add-1/4 tsp baking powder to the bowl and spill some outside
   start_time: 177.301
   step_id: 304
 - description: Measure and add-2 tbsp water to the bowl
   end_time: 268.98
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before whisking the mixture
     tag: Order Error
   modified_description: Measure and add-2 tbsp water to the bowl
   start_time: 226.787
@@ -54,17 +51,12 @@ step_annotations:
     the bowl
   end_time: 288.345
   errors:
-  - description: Under mixed
-    tag: Preparation Error
-  modified_description: Whisk-Whisk to combine mixture of flour, sugar and baking
-    powder in the bowl for only 5 seconds
+  - description: Step performed after adding water
+    tag: Order Error
   start_time: 269.738
   step_id: 308
 - description: Pour-Pour batter into prepared mug
   end_time: 345.27
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 331.907
   step_id: 307
 - description: Microwave-Microwave the mug and batter on high power for 60 seconds.
@@ -72,76 +64,77 @@ step_annotations:
     and then removing it. If wet batter clings to the toothpick, microwave for an
     additional 5 seconds. If the toothpick comes out clean, continue
   end_time: 505.513
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 364.759
   step_id: 312
 - description: Allow-Allow to cool until it is no longer hot to the touch
   end_time: 576.023
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before inverting the mug
     tag: Order Error
   start_time: 507.246
   step_id: 305
 - description: Invert-Invert the mug to release the cake onto a plate
   end_time: 620.583
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after allowing the cake to cool
     tag: Order Error
   start_time: 580.4639999999999
   step_id: 309
 - description: remove-then carefully remove the paper liner
   end_time: 643.918
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 625.432
   step_id: 295
 - description: Scoop-While the cake is cooling, prepare to pipe the frosting. Scoop
     4 spoonfuls of chocolate frosting into a zip-top bag
   end_time: 716.672
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 647.822
   step_id: 298
 - description: seal-seal zip top bag, removing as much air as possible
   end_time: 756.258
   errors:
-  - description: Step performed before correct order
-    tag: Order Error
+  - description: Did not remove the air from the bag completely
+    tag: Technique Error
   start_time: 720.382
   step_id: 311
 - description: cut-Use scissors to cut one corner from the bag to create a small opening
     1/4 inch in diameter
   end_time: 783.06
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 770.527
   step_id: 306
 - description: Squeeze-Squeeze the frosting through the opening to apply small dollops
     of frosting to the plate in a circle around the base of the cake
   end_time: 829.6696349732292
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 794.427
   step_id: 302
 - description: Measure and add-Measure and add 2 tsp vegetable oil to the bowl
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 300
 - description: Whisk-Whisk batter until no lumps remain
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 294
 - description: Measure and add-1.5 tbsp sugar to the mixing bowl
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 297
 - description: Measure and add-1/4 tsp vanilla extract to the bowl
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 313
