--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/7_breakfastburritos/7_30.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/7_breakfastburritos/7_30.yaml
@@ -13,14 +13,14 @@ step_annotations:
 - description: Microwave-Microwave for 3 minutes, stirring in between
   end_time: 259.64096814400256
   errors:
-  - description: 2 mins instead of 3 mins
+  - description: Microwave for 2 mins instead of 3 mins
     tag: Timing Error
   start_time: 78.09017531693492
   step_id: 73
 - description: Sprinkle-Sprinkle oregano in the bowl
   end_time: 281.11471783322565
   errors:
-  - description: Basil instead of oregano
+  - description: Sprinkle basil instead of oregano
     tag: Preparation Error
   start_time: 263.30126638648375
   step_id: 82
@@ -31,15 +31,12 @@ step_annotations:
 - description: Add-Add 1/2 tbsp sweet and sour sauce to the bowl
   end_time: 327.23447568848877
   errors:
-  - description: 1 tbsp instead of 1/2 tbsp
+  - description: Add 1 tbsp instead of 1/2 tbsp
     tag: Measurement Error
   start_time: 299.17218916279955
   step_id: 74
 - description: Mix-Mix the contents of the bowl well
   end_time: 364.0814779961329
-  errors:
-  - description: Do not mix contents of the bowl that well
-    tag: Technique Error
   start_time: 327.23447568848877
   step_id: 76
 - description: Sprinkle-Sprinkle 1 tbsp shredded cheddar cheese on top of the egg
@@ -48,15 +45,27 @@ step_annotations:
   step_id: 75
 - description: Place-Place 8 inch tortilla on a cutting board
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 81
 - description: Pour-Pour egg mixture on top of the tortilla
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 79
 - description: Roll-Roll the tortilla from one end to another into a log shape, about
     1.5 inches thick. Roll it tight enough to prevent gaps but not so tight that the
     filling leaks
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 78
